Added waf notes
Levitation import of page 2494 rev 8649.

--- a/0-/Release:DrMattDestruction.mediawiki
+++ b/0-/Release:DrMattDestruction.mediawiki
@@ -9,7 +9,10 @@ The XMMS2 Team would like to extend a big THANK YOU to all who have helped out w
 
 Upgrading should be smooth.
 
+If you build from source and waf can't find function sin, you need to remove all existing .pyc files in the build tree. Waf can't do that for you, so you need to use something like 'find -name "*.pyc" -delete' (This only happens if you build in the same tree that you already used for an older release of xmms2, e.g. if you track xmms2-stable.git)
+
 === Noteworthy changes ===
+Waf build system updated to version 1.5.2
 
 ==== For users ====
 
