Useless note about Bug fixes
Levitation import of page 2494 rev 8654.

--- a/0-/Release:DrMattDestruction.mediawiki
+++ b/0-/Release:DrMattDestruction.mediawiki
@@ -52,6 +52,8 @@ Dict and List now support Standard Library style const iterators (no read-write 
 
 ==== Bug fixes ====
 
+Many bugs were fixed, and probably more introduced. See the full Changelog below for details.
+
 === New platforms ===
 
 === Notes to client authors ===
