--- a/0-/Release:DrMattDestruction.mediawiki
+++ b/0-/Release:DrMattDestruction.mediawiki
@@ -56,6 +56,8 @@ Many bugs were fixed, and probably more introduced. See the full Changelog below
 
 === New platforms ===
 
+None (don't we have them all already?).
+
 === Notes to client authors ===
 There is soo much to say here with the xmmsv thing...
 
