--- a/0-/Release:DrMattDestruction.mediawiki
+++ b/0-/Release:DrMattDestruction.mediawiki
@@ -1,7 +1,7 @@
 == Release Notes ==
 After XMMS2 Team's tussles in Brussels; Here we go again!
 
-XMMS2 Team is proud to present a new release, as late as always. This time there has been huge changes "under the hook" with the new "xmmsv".
+XMMS2 Team is proud to present a new release, as late as always. This time there has been huge changes "under the hood" with the new "xmmsv".
 
 The XMMS2 Team would like to extend a big THANK YOU to all who have helped out with this release.
 
