--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -5,9 +5,9 @@ __NOEDITSECTION__
 {|
 |-
 |[[Image:Logo-white-128.png]]
-|XMMS2 0.5 DrLecter was just released.
+|XMMS2 0.6 DrMattDestruction was just released.
 
-Read the [[Release:DrLecter |release notes]] for DrLecter.
+Read the [[Release:DrMattDestruction |release notes]] for DrMattDestruction.
 
 Visit our [[Summer_of_Code_2009|Summer of Code 2009 page]].
 |-
