--- a/0-/OS X.mediawiki
+++ b/0-/OS X.mediawiki
@@ -1,7 +1,14 @@
 == Installation notes == 
 Download and install [http://www.macports.org/ macports]
 
-Install sqlite through macports with the command: "port install sqlite3". Then, make sure that '/opt/local/lib/pkgconfig' is on your PKG_CONFIG_PATH. Now you should be good to compile xmms2 on your Mac OS X Tiger.
+Install glib-2.0 and sqlite through macports with the command: "port install sqlite3 glib2". Then, make sure that '/opt/local/lib/pkgconfig' is on your PKG_CONFIG_PATH. Now you should be good to compile xmms2 on your Mac OS X Tiger.
+
+Support for major plugins and formats require the following additional macports:
+* python bindings: py25-pyrex
+* nycli: ?
+* mp3: libmad
+* flac: flac
+* vorbis: libvorbis
 
 == CoreAudio output ==
 XMMS2 has Native support for CoreAudio, no more fulhack as in XMMS1 using a hacked ESD.
