Levitation import of page 729 rev 8678.

--- a/0-/Developer Corner.mediawiki
+++ b/0-/Developer Corner.mediawiki
@@ -41,6 +41,7 @@ Policies and guidelines about processes and services related to the project as w
 * [[IRC Meeting]]
 * [[WAF modifications]]
 * [[XMMS2 Vision]]
+* [[XMMS2 Mac OS X Notes]]
 
 === Clients ===
 * [[Generic properties policy]]
