Levitation import of page 2500 rev 8682.

--- a/0-/Client:xmms2-notify.mediawiki
+++ b/0-/Client:xmms2-notify.mediawiki
@@ -9,7 +9,7 @@ by ''Evan McClain''
 '''Screenshots''': [http://www.prism.gatech.edu/~gtg031s/files/xmms2-notify.png]<br />
 [[Talk:Client:xmms2-notify | Discuss]]
 
-libnotify client that displays info for current song playing in XMMS2
+libnotify client that displays info for current song playing in XMMS2. Based off of [[Client:Dabra | Dabra]].
 
 [[Clients | More xmms2 clients]]
 
