Levitation import of page 2500 rev 8683.

--- a/0-/Client:xmms2-notify.mediawiki
+++ b/0-/Client:xmms2-notify.mediawiki
@@ -1,16 +1,1 @@
-__NOEDITSECTION__
-===xmms2-notify===
-by ''Evan McClain''
-
-'''Homepage''': http://github.com/aeroevan/xmms2-notify/tree/master/<br />
-'''Latest version''': 0.1.0<br />
-'''Development language''': C<br />
-'''User Interface''': libnotify notification<br />
-'''Screenshots''': [http://www.prism.gatech.edu/~gtg031s/files/xmms2-notify.png]<br />
-[[Talk:Client:xmms2-notify | Discuss]]
-
-libnotify client that displays info for current song playing in XMMS2. Based off of [[Client:Dabra | Dabra]].
-
-[[Clients | More xmms2 clients]]
-
-[[Category:Clients]]
+{{Client| name=xmms2-notify| author=Evan McClain| website=[http://github.com/aeroevan/xmms2-notify/tree/master/]| version=0.1.0| devlanguage=C| ui=libnotify notification| screenshots=http://www.prism.gatech.edu/~gtg031s/files/xmms2-notify.png| description=libnotify client that displays info for current song playing in XMMS2. Based off of [[Client:Dabra | Dabra]].}}
