Added an automatic category based on the language the client was written in
Levitation import of page 1170 rev 8691.

--- a/10-Template/Client.mediawiki
+++ b/10-Template/Client.mediawiki
@@ -23,3 +23,4 @@ This won't work unless the ParserExtensions are installed on this wiki:
 {{{description}}}
 
 [[Category:Clients]]
+<includeonly>[[Category:Clients written in {{{devlanguage|an unknown language}}}]]</includeonly>
