--- a/11-Template talk/Client.mediawiki
+++ b/11-Template talk/Client.mediawiki
@@ -1,5 +1,9 @@
 While the recently by [[User:Malvineous|Malvineous]] applied Wikipedia infobox style looks nice, it has some issues:
 # Homepage URLs are not properly wrapped over multiple lines (see revision 8676 of [[Client:Remuco]]).
-# There is an image included, but this Wiki is not able to upload image (webserver is not allowed to write files). Also, the image link should not be visible if there is no image for a client. Maybe the image thing could be a template parameter?
+# There is an image included, <strike>but this Wiki is not able to upload image (webserver is not allowed to write files)</strike>. Also, the image link should not be visible if there is no image for a client. Maybe the image thing could be a template parameter?
 # The automatic categories look awkward if a client uses multiple languages (see [[Client:Remuco]]).
 :Yes there are a few issues, I was going to post to the XMMS2 mailing list to ask for a few changes (upgrade to latest MediaWiki version and enable uploads.)  We'll also need the [http://meta.wikimedia.org/wiki/ParserFunctions ParserFunctions] installed to fix your second point about hiding the image link (there is some commented out code in the template that, if ParserFunctions were available, would display a message instead asking for a screenshot to be uploaded.)  I also agree the categories look weird with multiple languages, but if ParserFunctions can be installed it will be possible to solve this by adding multiple language tags (devlang1=xxx devlang2=yyy) and have it come out looking nice.  But it can't be done without ParserFunctions! -- [[User:Malvineous|Malvineous]] 00:09, 19 August 2009 (UTC)
+
+===== Image file name =====
+
+This template falls back to PAGENAME if the image parameter is not given. However PAGENAME usually is something like Client:XYZ and colons are apparently not allowed in image file names (in my case it has been replaced by a '-'). -- [[User:Mondai|obensonne]] 21:33, 20 August 2009 (UTC)
