looks like one more forgotten testing stuff ;)
Levitation import of page 2292 rev 8708 (minor).

--- a/0-/Client:Remuco.mediawiki
+++ b/0-/Client:Remuco.mediawiki
@@ -1,6 +1,6 @@
 {{
 Client
-|ximage=Client-Remuco.png
+|image=Client-Remuco.png
 |name=Remuco
 |author=Oben Sonne
 |website=[http://remuco.sourceforge.net/ remuco.sf.net]
