--- a/11-Template talk/Client.mediawiki
+++ b/11-Template talk/Client.mediawiki
@@ -1,11 +1,12 @@
 While the recently by [[User:Malvineous|Malvineous]] applied Wikipedia infobox style looks nice, it has some issues:
 # Homepage URLs are not properly wrapped over multiple lines (see revision 8676 of [[Client:Remuco]] or [[Client:xmms2-notify]]).
-# There is an image included, <strike>but this Wiki is not able to upload image (webserver is not allowed to write files)</strike>. Also, the image link should not be visible if there is no image for a client. Maybe the image thing could be a template parameter?
-# The automatic categories look awkward if a client uses multiple languages (see [[Client:Remuco]]).
-(updated -- [[User:Mondai|obensonne]] 22:11, 20 August 2009 (UTC))
+# There is an image included, <strike>but this Wiki is not able to upload image (webserver is not allowed to write files)</strike>. Also, the image link should not be visible if there is no image for a client. <strike>Maybe the image thing could be a template parameter?</strike>
+# <strike>The automatic categories look awkward if a client uses multiple languages (see [[Client:Remuco]])</strike>.
+(updated -- [[User:Mondai|obensonne]] 00:10, 21 August 2009 (UTC))
 :Yes there are a few issues, I was going to post to the XMMS2 mailing list to ask for a few changes (upgrade to latest MediaWiki version and enable uploads.)  We'll also need the [http://meta.wikimedia.org/wiki/ParserFunctions ParserFunctions] installed to fix your second point about hiding the image link (there is some commented out code in the template that, if ParserFunctions were available, would display a message instead asking for a screenshot to be uploaded.)  I also agree the categories look weird with multiple languages, but if ParserFunctions can be installed it will be possible to solve this by adding multiple language tags (devlang1=xxx devlang2=yyy) and have it come out looking nice.  But it can't be done without ParserFunctions! -- [[User:Malvineous|Malvineous]] 00:09, 19 August 2009 (UTC)
 
 ===== Image file name =====
 
 This template falls back to PAGENAME if the image parameter is not given. However PAGENAME usually is something like Client:XYZ and colons are apparently not allowed in image file names (in my case it has been replaced by a '-'). -- [[User:Mondai|obensonne]] 21:33, 20 August 2009 (UTC)
 :Thanks for pointing that out.  Hopefully the Client pages can be moved into a dedicated namespace to fix this!  I've also added extra tags to specify up to three development languages now that ParserExtensions are available, so hopefully that will fix your third point above.  (I was using [[Client:Remuco]] for testing, I hope you don't mind!)  I've also added a note about uploading an image if one doesn't exist yet, what do you think? -- [[User:Malvineous|Malvineous]] 23:01, 20 August 2009 (UTC)
+::Things get better and better :) I've re-enabled the image parameter in [[Client:Remuco]] (you've probably disabled for testing). But I don't mind, feel free to use that client page for testing, especially when this name space thing works and the image may be renamed to Client:Remuco.png so that the image parameter is not needed anymore. -- [[User:Mondai|obensonne]] 00:10, 21 August 2009 (UTC)
