--- a/11-Template talk/Client.mediawiki
+++ b/11-Template talk/Client.mediawiki
@@ -9,4 +9,4 @@ While the recently by [[User:Malvineous|Malvineous]] applied Wikipedia infobox s
 
 This template falls back to PAGENAME if the image parameter is not given. However PAGENAME usually is something like Client:XYZ and colons are apparently not allowed in image file names (in my case it has been replaced by a '-'). -- [[User:Mondai|obensonne]] 21:33, 20 August 2009 (UTC)
 :Thanks for pointing that out.  Hopefully the Client pages can be moved into a dedicated namespace to fix this!  I've also added extra tags to specify up to three development languages now that ParserExtensions are available, so hopefully that will fix your third point above.  (I was using [[Client:Remuco]] for testing, I hope you don't mind!)  I've also added a note about uploading an image if one doesn't exist yet, what do you think? -- [[User:Malvineous|Malvineous]] 23:01, 20 August 2009 (UTC)
-::Things get better and better :) I've re-enabled the image parameter in [[Client:Remuco]] (you've probably disabled for testing). But I don't mind, feel free to use that client page for testing, especially when this name space thing works and the image may be renamed to Client:Remuco.png so that the image parameter is not needed anymore. -- [[User:Mondai|obensonne]] 00:10, 21 August 2009 (UTC)
+::Things get better and better :) I've re-enabled the image parameter in [[Client:Remuco]] (you've probably disabled for testing). But I don't mind, feel free to use that client page for testing, especially when this name space thing works and the image may be renamed to Remuco.png (?) so that the image parameter is not needed anymore. -- [[User:Mondai|obensonne]] 00:17, 21 August 2009 (UTC)
